Fixing up some lingering alignement issues

--- a/ChimeraSheet.css
+++ b/ChimeraSheet.css
@@ -8,12 +8,13 @@
 	border: 10px solid black;
 	color: #000000;
 	font-family: 'Fira Sans';
+	font-size: 1.1em;
 }
 
 .charsheet .sheet-heading {
 	padding-top: 10px;
 	padding-bottom: 10px;
-	padding-left: 5px;
+	padding-left: 8px;
 	font-size: 2em; 
 	font-family: Orbitron;
 	border: 1px solid black;
@@ -226,17 +227,25 @@ button:active
 .sheet-tooltip h3 {
 	margin:12px 0;
 	color: #FEA600;
-	font-weight: 700;
+	font-weight: 100;
 	font-family: Orbitron;
+	font-size: 1.3em;
 }
-
 
 .sheet-tooltip .sheet-text-content {
     padding:10px 20px;
 }
 
+.sheet-tooltip + span {
+	vertical-align: middle;
+}
+
+
+.sheet-tooltip + input[type=text] {
+	vertical-align: text-bottom;
+}
+
 .sheet-tooltip .sheet-right {
-	font-family: 'Fira Sans';
     min-width:350px;
     max-width:600px;
     top:50%;
@@ -244,10 +253,7 @@ button:active
     margin-left:20px;
     transform:translate(0, -50%);
     padding:0;
-    color:#EEEEEE;
     background-color:#444444;
-    font-weight:normal;
-    font-size:13px;
     border-radius:8px;
     position:absolute;
     z-index:99999999;
@@ -256,6 +262,13 @@ button:active
     visibility:hidden; 
 	opacity:0; 
 	transition:opacity 0.8s;
+}
+
+.sheet-tooltip .sheet-text-content > p {
+	font-family: 'Fira Sans';
+	color:#EEEEEE;
+	font-weight:100;
+    font-size:1.1em;
 }
 
 .sheet-tooltip:hover .sheet-right {
